--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,7 @@
         "printWidth": 80,
         "tabWidth": 2,
         "singleQuote": true,
-        "trailingComma": "never",
+        "trailingComma": "es5",
         "arrowParens": "always",
         "semi": false,
         "endOfLine": "auto"
