--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript-eslint": "^7.7.0"
   },
   "dependencies": {
-    "@casl/ability": "^6.7.1"
+    "@casl/ability": "^6.7.1",
+    "zod": "^3.22.5"
   }
 }
